# MCP_Cluster

./: .env.example  .gitignore  README.md  pyproject.toml
.codegraph/: daemon.pid
.tmp-langchain-build/: asset-manifest.json  index.html
.tmp-langchain-build/static/css/: main.aade6c59.css  main.aade6c59.css.map
.tmp-langchain-build/static/js/: main.05915200.js.LICENSE.txt
app/: __init__.py  main.py  mcp_server.py
app/modules/config_center/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/llm_gateway/: __init__.py  models.py  provider.py  router.py  schemas.py  service.py
app/modules/prompt_registry/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/rag_service/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/secret_manager/: __init__.py  models.py  router.py  schemas.py  service.py
app/modules/tool_registry/: models.py  router.py  schemas.py  service.py
app/shared/: config.py  database.py  errors.py  models.py  tracing.py
docs/superpowers/plans/: 2026-06-13-aigc-rtc-shared-services-full-migration.md  2026-06-13-finance-llm-gateway-integration.md  2026-06-13-mcp-shared-services-v1.md
docs/superpowers/specs/: 2026-06-13-aigc-rtc-shared-services-full-migration-design.md  (+2 more)
scripts/: check_pgvector.py  seed_dev_data.py  smoke_test.py
tests/: conftest.py  test_config_center.py  test_database.py  test_health_and_errors.py  test_llm_gateway.py  test_prompt_registry.py  test_rag_service.py  test_secret_manager.py  test_seed_dev_data.py  test_tool_registry.py
