[project]
name = "mcp-shared-services"
version = "0.1.0"
description = "Modular shared AI services platform for MCP agent projects."
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.20.0",
    "asyncpg>=0.29.0",
    "cryptography>=49.0.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "mcp>=1.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
mcp-shared-services = "app.mcp_server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated",
]
